--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,10 +38,25 @@
             android:label="@string/title_activity_register"
             android:theme="@style/Theme.SertifikasiVSGA" />
 
+        <!-- InformationActivity -->
+        <activity
+            android:name=".ui.information.InformationActivity"
+            android:exported="false"
+            android:label="@string/title_activity_information"
+            android:theme="@style/AppTheme" />
+
+
         <!-- MainActivity -->
         <activity
             android:name=".MainActivity"
-            android:label="@string/app_name" />
+            android:label="@string/app_name"/>
+
+        <!-- AddDataActivity -->
+        <activity
+            android:name=".ui.data.add.AddDataActivity"
+            android:label="@string/title_activity_add"
+            android:exported="true"
+            android:theme="@style/AppTheme" />
 
     </application>
 
