--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -58,6 +58,13 @@
             android:exported="true"
             android:theme="@style/AppTheme" />
 
+        <!-- UserListDataActivity -->
+        <activity
+            android:name=".ui.data.list.UserListActivity"
+            android:label="@string/title_activity_user_list"
+            android:exported="true"
+            android:theme="@style/AppTheme" />
+
     </application>
 
 </manifest>
